# ibridge

./: README.md  THEORY.md  client.js  common.js  compile.sh  linecount.sh  package.json  server.js  socks-client.js  socks.js
compiled/: client.js  common.js  server.js  socks-client.js  socks.js
public/: ibridge.js  index.html
ui/: CMakeLists.txt  bridge.h  ibridge.rc  main.cpp
ui/html/: index.html  jquery-1.8.2.min.js  ui.js  underscore-min.js
